--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(#303b37, #1a1f1d);
@@ -18,7 +18,6 @@ body {
   text-align: center;
   margin: 3rem auto;
 }
-
 
 #header img {
   width: 5rem;
@@ -32,24 +31,21 @@ body {
 }
 
 #user-input {
-  padding: 1rem;
-  max-width: 30rem;
-  margin: 2rem auto;
+  padding: 2rem;
+  max-width: 45rem;
+  margin: 4rem auto;
   border-radius: 4px;
   background: linear-gradient(180deg, #307e6c, #2b996d);
-}
-
-.input-group {
-  display: flex;
-  justify-content: space-evenly;
-  gap: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
 }
 
 #user-input label {
   display: block;
-  margin-bottom: 0.25rem;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -65,12 +61,14 @@ body {
 }
 
 #result {
+  display: flex;
   max-width: 50rem;
   margin: 2rem auto;
   padding: 1rem;
   table-layout: fixed;
   border-spacing: 1rem;
   text-align: right;
+  justify-content: center;
 }
 
 #result thead {
@@ -79,11 +77,22 @@ body {
 }
 
 #result tbody {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 0.85rem;
   color: #c2e9e0;
 }
 
+#result th {
+  white-space: nowrap;
+}
+
 .center {
   text-align: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 3rem;
+  align-items: end;
+}
+.cell {
+  margin-bottom: 10px; /* Adjust the value to set the desired distance */
 }
